option java_outer_classname="EventIdCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message EventIdCommand
{
	optional string eventUniqueId = 1;
	optional int64 operationCounter = 2;
	optional int32 eventCounter = 3;
	optional int32 queryChangeType = 4;
	optional string queryId = 5;
	optional int32 eventType = 6;
}